--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
-      <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
-      <link rel="manifest" href="/manifest.json">
+      <link rel='shortcut icon' type='image/x-icon' href='/pwa/favicon.ico' />
+      <link rel="manifest" href="/pwa/manifest.json">
   </head>
   <body>
     This is a test
-    <script src="/src/js/index.js"></script>
+    <script src="/pwa/src/js/index.js"></script>
   </body>
 </html>
