--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <title>LBS</title>
 
-  <link rel='shortcut icon' type='image/x-icon' href='/pwa/favicon.ico' />
+  <link rel='shortcut icon' type='image/x-icon' href='/pwa/favicon.png' />
   
   <link rel="manifest" href="/pwa/manifest.json">
   
